samples/_failures_safe/1761071105_cd72cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e940b0af.c: In function ‘main’:
./samples/SAFE/__tmp_e940b0af.c:129:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  129 |     int pos
      |     ^~~
./samples/SAFE/__tmp_e940b0af.c:129:5: error: expected declaration or statement at end of input
